# fmatrix

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  bot.py  commands.py  config.py  database.py  discogs_client.py  docker-compose.yml  flake.nix  fmatrix.service  lastfm_client.py  lyrics_client.py  main.py  module.nix  package.nix  pyproject.toml  requirements.txt  spotify_client.py
.forgejo/workflows/: docker-push.yml
.github/workflows/: docker-publish.yml
bot_commands/: __init__.py  base.py  discogs.py  lastfm.py  router.py
