[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmatrix"
version = "0.1.0"
description = "A Matrix bot that shows your Last.fm stats directly in your rooms."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "zerw0" }
]
keywords = ["matrix", "bot", "lastfm", "music", "leaderboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "matrix-nio>=0.24.0",
    "aiohttp>=3.9.1",
    "pylast>=5.2.0",
    "aiosqlite>=0.19.0",
    "python-dateutil>=2.8.2",
    "Pillow>=10.4.0",
    "certifi>=2024.12.14",
]

[project.scripts]
fmatrix = "main:run"

[tool.setuptools]
py-modules = ["main", "bot", "config", "commands", "database", "lastfm_client", "discogs_client"]
