[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmatrix"
version = "0.1.0"
description = "A Matrix bot that shows your Last.fm stats directly in your rooms."
readme = "README.md"
license = { text = "WTFPL" }
requires-python = ">=3.10"
authors = [
    { name = "zerw0" }
]
keywords = ["matrix", "bot", "lastfm", "music", "leaderboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: WTFPL",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "matrix-nio>=0.24.0",
    "aiohttp>=3.10.11",
    "aiosqlite>=0.19.0",
    "python-dateutil>=2.8.2",
    "Pillow>=11.0.0",
    "certifi>=2024.12.14",
    "spotipy>=2.23.0",
]

[project.scripts]
fmatrix = "main:run"

[tool.setuptools]
py-modules = ["main", "bot", "config", "database", "lastfm_client", "discogs_client", "spotify_client", "lyrics_client"]
packages = [{find = {where = ["."], include = ["bot_commands", "bot_commands.*"]}}]
